Ex-4, task 1 - major progress !

--- a/SuperCard/SuperCard/Base.lproj/Main.storyboard
+++ b/SuperCard/SuperCard/Base.lproj/Main.storyboard
@@ -18,6 +18,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NHl-r8-70g">
+                                <rect key="frame" x="16" y="588" width="62" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Re-Deal">
+                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="reDeal:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bee-0z-uJs"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="47y-15-CbB">
+                                <rect key="frame" x="16" y="20" width="122" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SHV-iL-rT6" customClass="PlayingCardView">
                                 <rect key="frame" x="156" y="129" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -96,23 +113,6 @@
                                     <outletCollection property="gestureRecognizers" destination="gKj-B8-x3t" appends="YES" id="zAL-7Z-t0H"/>
                                 </connections>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="47y-15-CbB">
-                                <rect key="frame" x="16" y="20" width="122" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NHl-r8-70g">
-                                <rect key="frame" x="16" y="588" width="62" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Re-Deal">
-                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="reDeal:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bee-0z-uJs"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -271,18 +271,6 @@
                     <tabBarItem key="tabBarItem" title="Set" id="FPV-3F-Lie"/>
                     <connections>
                         <outlet property="scoreLable" destination="dY3-61-eSA" id="47S-GA-xr1"/>
-                        <outletCollection property="playingCardViews" destination="vK4-Fs-Zkb" id="AEM-gq-bMy"/>
-                        <outletCollection property="playingCardViews" destination="Ckz-V5-VhY" id="6NA-ib-zOU"/>
-                        <outletCollection property="playingCardViews" destination="2uf-Xj-sKY" id="ptV-fM-Urh"/>
-                        <outletCollection property="playingCardViews" destination="OmI-tY-gnb" id="VH3-7h-aD9"/>
-                        <outletCollection property="playingCardViews" destination="0Zt-h4-HJm" id="0Rv-Cp-9av"/>
-                        <outletCollection property="playingCardViews" destination="owS-Vg-SoL" id="U29-qO-JCg"/>
-                        <outletCollection property="playingCardViews" destination="lf9-VC-VCE" id="b9M-KV-Yd1"/>
-                        <outletCollection property="playingCardViews" destination="kX7-Ve-uf6" id="3eK-ao-jaa"/>
-                        <outletCollection property="playingCardViews" destination="GZ9-kX-VjF" id="cXd-E8-NDe"/>
-                        <outletCollection property="playingCardViews" destination="swE-SS-zAv" id="y0p-dx-h6s"/>
-                        <outletCollection property="playingCardViews" destination="sPq-Oj-AR9" id="koB-j5-gvD"/>
-                        <outletCollection property="playingCardViews" destination="zru-SE-2tg" id="6yK-vq-73F"/>
                         <outletCollection property="setCardViews" destination="zru-SE-2tg" id="coy-Jh-NdF"/>
                         <outletCollection property="setCardViews" destination="vK4-Fs-Zkb" id="nj0-2P-BrS"/>
                         <outletCollection property="setCardViews" destination="sPq-Oj-AR9" id="So9-LR-azf"/>
@@ -295,6 +283,7 @@
                         <outletCollection property="setCardViews" destination="kX7-Ve-uf6" id="oAU-hd-i8A"/>
                         <outletCollection property="setCardViews" destination="GZ9-kX-VjF" id="FFR-T8-79f"/>
                         <outletCollection property="setCardViews" destination="swE-SS-zAv" id="YZW-qh-iXG"/>
+                        <outletCollection property="setCardViews" destination="zru-SE-2tg" id="htT-gs-uKk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ohX-cf-cNT" sceneMemberID="firstResponder"/>
