--- a/SuperCard/SuperCard/Base.lproj/Main.storyboard
+++ b/SuperCard/SuperCard/Base.lproj/Main.storyboard
@@ -169,8 +169,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cmZ-nh-uAu">
+                                <rect key="frame" x="16" y="20" width="343" height="532"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vK4-Fs-Zkb" customClass="SetCardView">
-                                <rect key="frame" x="156" y="129" width="64" height="96"/>
+                                <rect key="frame" x="156" y="32" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
@@ -179,67 +184,67 @@
                                 </connections>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zru-SE-2tg" customClass="SetCardView">
-                                <rect key="frame" x="236" y="129" width="64" height="96"/>
+                                <rect key="frame" x="236" y="32" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ckz-V5-VhY" customClass="SetCardView">
-                                <rect key="frame" x="74" y="233" width="64" height="96"/>
+                                <rect key="frame" x="74" y="136" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2uf-Xj-sKY" customClass="SetCardView">
-                                <rect key="frame" x="156" y="233" width="64" height="96"/>
+                                <rect key="frame" x="156" y="136" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OmI-tY-gnb" customClass="SetCardView">
-                                <rect key="frame" x="236" y="233" width="64" height="96"/>
+                                <rect key="frame" x="236" y="136" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Zt-h4-HJm" customClass="SetCardView">
-                                <rect key="frame" x="74" y="337" width="64" height="96"/>
+                                <rect key="frame" x="74" y="240" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="owS-Vg-SoL" customClass="SetCardView">
-                                <rect key="frame" x="156" y="337" width="64" height="96"/>
+                                <rect key="frame" x="156" y="240" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lf9-VC-VCE" customClass="SetCardView">
-                                <rect key="frame" x="236" y="337" width="64" height="96"/>
+                                <rect key="frame" x="236" y="240" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kX7-Ve-uf6" customClass="SetCardView">
-                                <rect key="frame" x="74" y="441" width="64" height="96"/>
+                                <rect key="frame" x="74" y="344" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GZ9-kX-VjF" customClass="SetCardView">
-                                <rect key="frame" x="156" y="441" width="64" height="96"/>
+                                <rect key="frame" x="156" y="344" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="swE-SS-zAv" customClass="SetCardView">
-                                <rect key="frame" x="236" y="441" width="64" height="96"/>
+                                <rect key="frame" x="236" y="344" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sPq-Oj-AR9" customClass="SetCardView">
-                                <rect key="frame" x="74" y="129" width="64" height="96"/>
+                                <rect key="frame" x="74" y="32" width="64" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
@@ -248,14 +253,14 @@
                                 </connections>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dY3-61-eSA">
-                                <rect key="frame" x="16" y="20" width="122" height="21"/>
+                                <rect key="frame" x="16" y="597" width="122" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hsG-6n-bIo">
-                                <rect key="frame" x="16" y="588" width="62" height="30"/>
+                                <rect key="frame" x="297" y="597" width="62" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Re-Deal">
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -264,25 +269,37 @@
                                     <action selector="reDeal:" destination="G0o-Nn-HdH" eventType="touchUpInside" id="hRL-40-yUF"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XX9-zp-5CC">
+                                <rect key="frame" x="156" y="560" width="64" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="MoreCards" image="dealMoreCards">
+                                    <color key="titleColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="addCards:" destination="G0o-Nn-HdH" eventType="touchUpInside" id="rlg-Fi-jRs"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="fQF-0F-x5W"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Set" id="FPV-3F-Lie"/>
                     <connections>
+                        <outlet property="addCardsBtn" destination="XX9-zp-5CC" id="e5S-8j-DZP"/>
                         <outlet property="scoreLable" destination="dY3-61-eSA" id="47S-GA-xr1"/>
-                        <outletCollection property="setCardViews" destination="zru-SE-2tg" id="coy-Jh-NdF"/>
-                        <outletCollection property="setCardViews" destination="vK4-Fs-Zkb" id="nj0-2P-BrS"/>
-                        <outletCollection property="setCardViews" destination="sPq-Oj-AR9" id="So9-LR-azf"/>
-                        <outletCollection property="setCardViews" destination="Ckz-V5-VhY" id="DD1-ck-PNx"/>
-                        <outletCollection property="setCardViews" destination="2uf-Xj-sKY" id="gQz-FD-MWZ"/>
-                        <outletCollection property="setCardViews" destination="OmI-tY-gnb" id="4Oh-60-WP1"/>
-                        <outletCollection property="setCardViews" destination="0Zt-h4-HJm" id="j2R-C0-k0V"/>
-                        <outletCollection property="setCardViews" destination="owS-Vg-SoL" id="2r4-Ho-2hz"/>
-                        <outletCollection property="setCardViews" destination="lf9-VC-VCE" id="dUf-2h-m7F"/>
-                        <outletCollection property="setCardViews" destination="kX7-Ve-uf6" id="oAU-hd-i8A"/>
-                        <outletCollection property="setCardViews" destination="GZ9-kX-VjF" id="FFR-T8-79f"/>
-                        <outletCollection property="setCardViews" destination="swE-SS-zAv" id="YZW-qh-iXG"/>
+                        <outlet property="viewBoundsForCards" destination="cmZ-nh-uAu" id="fAW-Zi-hTW"/>
+                        <outletCollection property="setCardViews" destination="zru-SE-2tg" collectionClass="NSMutableArray" id="coy-Jh-NdF"/>
+                        <outletCollection property="setCardViews" destination="vK4-Fs-Zkb" collectionClass="NSMutableArray" id="nj0-2P-BrS"/>
+                        <outletCollection property="setCardViews" destination="sPq-Oj-AR9" collectionClass="NSMutableArray" id="So9-LR-azf"/>
+                        <outletCollection property="setCardViews" destination="Ckz-V5-VhY" collectionClass="NSMutableArray" id="DD1-ck-PNx"/>
+                        <outletCollection property="setCardViews" destination="2uf-Xj-sKY" collectionClass="NSMutableArray" id="gQz-FD-MWZ"/>
+                        <outletCollection property="setCardViews" destination="OmI-tY-gnb" collectionClass="NSMutableArray" id="4Oh-60-WP1"/>
+                        <outletCollection property="setCardViews" destination="0Zt-h4-HJm" collectionClass="NSMutableArray" id="j2R-C0-k0V"/>
+                        <outletCollection property="setCardViews" destination="owS-Vg-SoL" collectionClass="NSMutableArray" id="2r4-Ho-2hz"/>
+                        <outletCollection property="setCardViews" destination="lf9-VC-VCE" collectionClass="NSMutableArray" id="dUf-2h-m7F"/>
+                        <outletCollection property="setCardViews" destination="kX7-Ve-uf6" collectionClass="NSMutableArray" id="oAU-hd-i8A"/>
+                        <outletCollection property="setCardViews" destination="GZ9-kX-VjF" collectionClass="NSMutableArray" id="FFR-T8-79f"/>
+                        <outletCollection property="setCardViews" destination="swE-SS-zAv" collectionClass="NSMutableArray" id="YZW-qh-iXG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ohX-cf-cNT" sceneMemberID="firstResponder"/>
@@ -292,7 +309,10 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="265" y="73"/>
+            <point key="canvasLocation" x="264.80000000000001" y="72.413793103448285"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dealMoreCards" width="462" height="460"/>
+    </resources>
 </document>
